# blueprint

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
src/blueprint/generators/: project.py
src/blueprint/templates/base/: app.py.j2  logger_port.py.j2
src/blueprint/templates/docs/: hexagonal.puml.j2
src/hexa_ddd_blueprint/: __init__.py  defaults.py  logging.py
src/hexa_ddd_blueprint/cli/: main.py
src/hexa_ddd_blueprint/generators/: project.py
src/hexa_ddd_blueprint/prompts/: interactive.py
src/hexa_ddd_blueprint/templates/base/: Makefile.j2  README.md.j2  __main__.py.j2  logging_adapter.py.j2  pre-commit-config.yaml.j2  pyproject.toml.j2
src/hexa_ddd_blueprint/templates/db/postgres/: database.py.j2
src/hexa_ddd_blueprint/templates/devcontainer/: devcontainer.json.j2
tests/: test_cli.py  test_generator.py  test_prompts.py
