[project]
name = "hexa-ddd-blueprint"
dynamic = ["version"]
description = "CLI tool that scaffolds opinionated Python projects following DDD + Hexagonal Architecture"
readme = "README.md"
license = "MIT"
authors = [{ name = "ayman kastali", email = "aymankastali.backend@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["typer>=0.9.0", "rich>=13.0.0", "jinja2>=3.1.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.scripts]
hexa-ddd-blueprint = "hexa_ddd_blueprint.cli.main:app"

[project.urls]
Homepage = "https://github.com/AymanKastali/hexa-ddd-blueprint"
Repository = "https://github.com/AymanKastali/hexa-ddd-blueprint"
Issues = "https://github.com/AymanKastali/hexa-ddd-blueprint/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/hexa_ddd_blueprint/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hexa_ddd_blueprint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[dependency-groups]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.4.0", "debugpy>=1.8.0"]
